kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x12-fhir-converter
  namespace: fhir-services
  labels:
    app: x12-fhir-converter
    app.kubernetes.io/name: x12-fhir-converter
    app.kubernetes.io/part-of: infor-fhir-platform
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: x12-fhir-converter
